--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
             const [activeEntityData, setActiveEntityData] = useState(null);
             const [searchTerm, setSearchTerm] = useState("");
             const [isQuerying, setIsQuerying] = useState(false);
+            const [showAllNames, setShowAllNames] = useState(false);
             
             // Auto-load states
             const [dataLoaded, setDataLoaded] = useState(false);
@@ -172,6 +173,29 @@
                 if (!nameText) return null;
                 if (/^-?\d+(\.\d+)?$/.test(nameText)) return null;
                 return nameText;
+            };
+
+            const getAllLocationNames = (loc) => {
+                if (!loc) return [];
+                const allNames = [];
+                const addName = (name) => {
+                    if (name === null || name === undefined) return;
+                    const clean = String(name).trim();
+                    if (!clean) return;
+                    if (!allNames.some(existing => existing.toLowerCase() === clean.toLowerCase())) {
+                        allNames.push(clean);
+                    }
+                };
+
+                addName(loc['Hebrew Name']);
+                addName(loc['English Name']);
+
+                ['Alt English Names', 'Alt Hebrew Names', 'Alt Names', 'Alternative Names'].forEach(field => {
+                    if (!loc[field]) return;
+                    String(loc[field]).split(/[,;|]/).forEach(addName);
+                });
+
+                return allNames;
             };
 
             const extractYear = (val) => {
@@ -607,6 +631,10 @@
                 }, 50); 
             }, [geoData, selectedLocation, year, analysisMode]); 
 
+            useEffect(() => {
+                setShowAllNames(false);
+            }, [selectedLocation]);
+
             const switchMode = (mode) => {
                 setAnalysisMode(mode);
                 if (mode === 'main') {
@@ -629,6 +657,10 @@
                 }).slice(0, 15);
             }, [searchTerm, locations]);
 
+            const selectedLocationNames = useMemo(() => {
+                return getAllLocationNames(selectedLocation);
+            }, [selectedLocation]);
+
             const handleLocationSelect = (loc) => {
                 setSelectedLocation(loc);
                 setSearchTerm("");
@@ -642,7 +674,8 @@
             };
 
             return (
-                <div className="flex h-screen bg-slate-50 text-slate-800">
+                <div className="h-screen bg-slate-50 text-slate-800 flex flex-col">
+                    <div className="flex flex-1 min-h-0">
                     <aside className="w-96 bg-white border-r border-slate-300 overflow-y-auto flex flex-col">
                         <div className="p-6 border-b border-slate-200">
                             <h1 className="text-2xl font-black text-blue-600 mb-1">מפה היסטורית</h1>
@@ -717,6 +750,27 @@
                                                 <div className="text-sm font-bold text-slate-700">מיקום שנבחר:</div>
                                                 <div className="font-bold text-lg text-blue-600">{selectedLocation['Hebrew Name']}</div>
                                                 <div className="text-[10px] text-slate-400">{selectedLocation['English Name']}</div>
+                                            </div>
+
+                                            <div className="bg-slate-50 border border-slate-200 rounded-lg p-3 space-y-2">
+                                                <div className="text-xs font-bold text-slate-700">שמות המקום</div>
+                                                {selectedLocationNames.length > 2 && (
+                                                    <button
+                                                        onClick={() => setShowAllNames(!showAllNames)}
+                                                        className="text-[11px] font-bold text-blue-600 hover:text-blue-700"
+                                                    >
+                                                        {showAllNames ? 'הסתר שמות נוספים' : 'הצג את כל השמות הנוספים'}
+                                                    </button>
+                                                )}
+                                                {showAllNames && selectedLocationNames.length > 0 && (
+                                                    <div className="flex flex-wrap gap-1.5">
+                                                        {selectedLocationNames.map((name, idx) => (
+                                                            <span key={idx} className="px-2 py-1 rounded-md bg-white border border-slate-300 text-[11px] text-slate-700">
+                                                                {name}
+                                                            </span>
+                                                        ))}
+                                                    </div>
+                                                )}
                                             </div>
 
                                             {activeEntityData && (
@@ -911,12 +965,8 @@
                     <main className="flex-1 relative bg-slate-200 flex flex-col">
                         <div id="map-container" className="flex-1 w-full"></div>
 
-                        <div className="bg-slate-900 text-white px-4 py-3 text-[11px] text-center border-t border-slate-700">
-                            <div className="max-w-3xl mx-auto">Cederman, Lars-Erik, Luc Girardin, Carl Müller-Crepon, and Yannick Pengl. 2025. Nationalism and the Transformation of the State: Border Change and Political Violence in the Modern World. Cambridge University Press.</div>
-                        </div>
-
                         <div 
-                            className="absolute bottom-10 left-1/2 -translate-x-1/2 w-[85%] max-w-3xl bg-white/95 backdrop-blur-md shadow-xl rounded-3xl p-6 border border-slate-200 z-[1000]"
+                            className="absolute bottom-14 left-1/2 -translate-x-1/2 w-[85%] max-w-3xl bg-white/95 backdrop-blur-md shadow-xl rounded-3xl p-6 border border-slate-200 z-[1000]"
                             onMouseDown={e => e.stopPropagation()}
                             onMouseUp={e => e.stopPropagation()}
                             onClick={e => e.stopPropagation()}
@@ -941,6 +991,12 @@
                             </div>
                         </div>
                     </main>
+
+                    </div>
+
+                    <div className="fixed bottom-0 left-0 right-0 z-[1100] bg-slate-900 text-white px-4 py-3 text-[11px] text-center border-t border-slate-700 shadow-lg">
+                        <div className="max-w-6xl mx-auto">החלוקה למרחבים גיאוגרפיים מבוססת על: Cederman, Lars-Erik, Luc Girardin, Carl Müller-Crepon, and Yannick Pengl. 2025. Nationalism and the Transformation of the State: Border Change and Political Violence in the Modern World. Cambridge University Press.</div>
+                    </div>
                 </div>
             );
         };
